--- a/djangodash2012/templates/miracle.html
+++ b/djangodash2012/templates/miracle.html
@@ -1,4 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>{{ miracle.name }}</h1>
+    <h1>{{ miracle.name }}</h1>
+    <ul class="blocks">
+        {% for image in miracle.image_set.all %}
+            <li>
+                <div class="padding-10 margin-10 black-50">
+                    <img src="{{ image.url }}" />
+                </div>
+            </li>
+        {% endfor %}
+    </ul>
 {% endblock %}
