Add liru counter

--- a/djangodash2012/templates/base.html
+++ b/djangodash2012/templates/base.html
@@ -8,6 +8,13 @@
     <meta name="description" content="" />
     <link rel="stylesheet" href="{% static 'css/style.css'%}" type="text/css" media="screen, projection" />
     <!--[if lte IE 6]><link rel="stylesheet" href="{% static 'css/style_ie.css' %}" type="text/css" media="screen, projection" /><![endif]-->
+    <!--LiveInternet counter--><script type="text/javascript"><!--
+        new Image().src = "//counter.yadro.ru/hit?r"+
+        escape(document.referrer)+((typeof(screen)=="undefined")?"":
+        ";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?
+                screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
+        ";"+Math.random();//--></script><!--/LiveInternet-->
+
 </head>
 
 <body>
