--- a/template/index.html
+++ b/template/index.html
@@ -6,17 +6,29 @@
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen, projection" />
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="/js/jquery.masonry.min.js"></script>
+	<script type="text/javascript" src="/js/main.js"></script>
 	<!--[if lte IE 6]><link rel="stylesheet" href="style_ie.css" type="text/css" media="screen, projection" /><![endif]-->
 </head>
 
 <body>
 
+
 <div id="wrapper">
 
+	
 	<div id="header">
 		<div class="padding-10 black-80">
 			<div class="CenterLayout">
 				<a href="/" class="logo"></a>
+					<ul class="menu">					
+						<li><a href="/">Home</a></li>
+						<li><a href="/">About</a></li>
+						<li><a href="/">Rating</a></li>
+						<li><a href="/">Random</a></li>
+					</ul>
 				<div class="right">
 					<ul>					
 					<li>
@@ -26,12 +38,12 @@
 					<li>
 							<div id="fb-root"></div>
 						<script>(function(d, s, id) {
-							  var js, fjs = d.getElementsByTagName(s)[0];
-							  if (d.getElementById(id)) return;
-							  js = d.createElement(s); js.id = id;
-							  js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1";
-							  fjs.parentNode.insertBefore(js, fjs);
-							}(document, 'script', 'facebook-jssdk'));
+							var js, fjs = d.getElementsByTagName(s)[0];
+							if (d.getElementById(id)) return;
+							js = d.createElement(s); js.id = id;
+							js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1";
+							fjs.parentNode.insertBefore(js, fjs);
+						}(document, 'script', 'facebook-jssdk'));
 						</script>
 						<div class="fb-like" data-send="true" data-layout="button_count" data-width="450" data-show-faces="true" data-colorscheme="dark" data-font="tahoma"></div>
 					</li>
@@ -40,45 +52,81 @@
 			
 				</div>
 			</div>
+			<div class="clear"></div>
 		</div>	
 	</div><!-- #header-->
 	<div id="content">
 		<div class="CenterLayout padding-10">
-			<ul class="blocks">
-			<li><div class="padding-10 margin-10 black-50">
-				<img src="/images/attractions/liberty.png" /><a href="">Statue of Liberty</a>
-				<p>The Statue of Liberty (Liberty Enlightening the World; French: La Liberté éclairant le monde) is a colossal neoclassical sculpture on Libe</p>
-			</div></li>
-			
-			<li><div class="padding-10 margin-10 black-50">
-				<img src="/images/attractions/liberty.png" /><a href="">Statue of Liberty</a>
-				<p>The Statue of Liberty (Liberty Enlightening the World; French: La Liberté éclairant le monde) is a colossal neoclassical sculpture on Liberty Island in New York Harbor, designed by Frédéric Bartholdi and dedicated on October 28, 1886. The statue, a gift to the United States from the people of France, is of a robed female figure representing Libertas, the Roman goddess of freedom, who bears a torch and a tabula ansata (a tablet evoking the law) upon which is inscribed the date of the American Declaration of Independence, July 4, 1776. A broken chain lies at her feet. The statue is an icon of freedom and of the United States: a welcoming signal to immigrants arriving from abroad.</p>
-			</div></li>
-			
-			<li><div class="padding-10 margin-10 black-50">
-				<img src="/images/attractions/liberty.png" /><a href="">Statue of Liberty</a>
-				<p>The Statue of Liberty (Liberty Enlightening the World; French: La Liberté éclairant le monde) is a colossal neoclassical sculpture on Liberty Island in New York Harbor, designed by Frédéric Bartholdi and dedicated on October 28, 1886. The statue, a gift to the United States from the people of France, is of a robed female figure representing Libertas, the Roman goddess of freedom, who bears a torch and a tabula ansata (a tablet evoking the law) upon which is inscribed the date of the American Declaration of Independence, July 4, 1776. A broken chain lies at her feet. The statue is an icon of freedom and of the United States: a welcoming signal to immigrants arriving from abroad.</p>
-			</div></li>
-			
-			<li><div class="padding-10 margin-10 black-50">
-				<img src="/images/attractions/liberty.png" /><a href="">Statue of Liberty</a>
-				<p>The Statue of Liberty (Liberty Enlightening the World; French: La Liberté éclairant le monde) is a colossal neoclassical sculpture on Liberty Island in New York Harbor, designed by Frédéric Bartholdi and dedicated on October 28, 1886. The statue, a gift to the United States from the people of France, is of a robed female figure representing Libertas, the Roman goddess of freedom, who bears a torch and a tabula ansata (a tablet evoking the law) upon which is inscribed the date of the American Declaration of Independence, July 4, 1776. A broken chain lies at her feet. The statue is an icon of freedom and of the United States: a welcoming signal to immigrants arriving from abroad.</p>
-			</div></li>
-			
-			<li><div class="padding-10 margin-10 black-50">
-				<img src="/images/attractions/liberty.png" /><a href="">Statue of Liberty</a>
-				<p>The Statue of Liberty (Liberty Enlightening the World; French: La Liberté éclairant le monde) is a colossal neoclassical sculpture on Liberty Island in New York Harbor, designed by Frédéric Bartholdi and dedicated on October 28, 1886. The statue, a gift to the United States from the people of France, is of a robed female figure representing Libertas, the Roman goddess of freedom, who bears a torch and a tabula ansata (a tablet evoking the law) upon which is inscribed the date of the American Declaration of Independence, July 4, 1776. A broken chain lies at her feet. The statue is an icon of freedom and of the United States: a welcoming signal to immigrants arriving from abroad.</p>
-			</div></li>
-			
-			</ul>
+			  <div id="imagesLoad">
+				
+		   
+		    
+		    	<div class="box-2 float-left">
+		    	<div class="imagesPanel black-50 radius-top" style="text-align:center;">
+		    			<div class="padding-10">		    	
+		    				<a href="/" class="caption">Tower of Liberty</a>
+		    			</div>
+		    		</div>
+		    		<div class="img" style="background-image:url('/images/attractions/liberty.jpg')"></div>
+		    		<div class="imagesPanel black-50" style="text-align:center;">
+		    				<div class="padding-10">
+			    				<span class="photo">10</span>
+			    				<span class="view">1000</span>
+			    			</div>
+		    		</div>
+		    	</div>
+		    
+		    
+				
+		    	
+		    
+		    	<div class="box-2 float-left">
+		    	<div class="imagesPanel black-50 radius-top" style="text-align:center;">
+		    			<div class="padding-10">		    	
+		    				<a href="/" class="caption">eifell tower</a>
+		    			</div>
+		    		</div>
+		    		<div class="img" style="background-image:url('/images/attractions/eifell_tower.jpg')"></div>
+		    		<div class="imagesPanel black-50" style="text-align:center;">
+		    				<div class="padding-10">
+			    				<span class="photo">10</span>
+			    				<span class="view">1000</span>
+			    			</div>
+		    		</div>
+		    	</div>
+		    
+		    
+				
+		    	
+		    
+		    	<div class="box-2 float-left">
+		    	<div class="imagesPanel black-50 radius-top" style="text-align:center;">
+		    			<div class="padding-10">		    	
+		    				<a href="/" class="caption">Tower of Liberty</a>
+		    			</div>
+		    		</div>
+		    		<div class="img" style="background-image:url('/images/attractions/colosseum.jpg')"></div>
+		    		<div class="imagesPanel black-50" style="text-align:center;">
+		    				<div class="padding-10">
+			    				<span class="photo">10</span>
+			    				<span class="view">1000</span>
+			    			</div>
+		    		</div>
+		    	</div>
+		    
+		    
+				
+		    	
+		    	
+			</div>	
 		</div>	
 	</div><!-- #content-->
 
 </div><!-- #wrapper -->
-
+<div class="clear"></div>
 <div id="footer">
-	<div class="CenterLayout">
-			dsfghjk
+	<div class="CenterLayout padding-10 black-80 radius">
+			dfgdfgdfg
 	</div>
 </div><!-- #footer -->
 
