--- a/template/slider_eifell.html
+++ b/template/slider_eifell.html
@@ -54,10 +54,10 @@
 		</div>	
 	</div><!-- #header-->
 	<div id="content">
-		<div class="images" style="background-image: url('/images/attractions/liberty.jpg')">
+		<div class="images" style="background-image: url('/images/attractions/eifell_tower.jpg')">
 			<div class="under">
 				<div class="CenterLayout">
-				<h1>Tower of Liberty</h1>
+				<h1>EIFELL TOWER</h1>
 				</div>
 			</div>
 		</div>
