--- a/djangodash2012/templates/base.html
+++ b/djangodash2012/templates/base.html
@@ -7,6 +7,10 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <link rel="stylesheet" href="{% static 'css/style.css'%}" type="text/css" media="screen, projection" />
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="{% static 'js/jquery.masonry.min.js'%}"></script>
+    <script type="text/javascript" src="{% static 'js/main.js'%}"></script>
     <!--[if lte IE 6]><link rel="stylesheet" href="{% static 'css/style_ie.css' %}" type="text/css" media="screen, projection" /><![endif]-->
     <!--LiveInternet counter--><script type="text/javascript"><!--
         new Image().src = "//counter.yadro.ru/hit?r"+
@@ -16,40 +20,44 @@
         ";"+Math.random();//--></script><!--/LiveInternet-->
 
 </head>
-
 <body>
 
 <div id="wrapper">
 
     <div id="header">
         {% block header %}
-        <div class="padding-10 black-80">
-            <div class="CenterLayout">
-                <a href="/" class="logo"></a>
-                <div class="right">
-                    <ul>
-                        <li>
-                            <a href="https://twitter.com/share" class="twitter-share-button" data-via="MiraclesLive">Tweet</a>
-                            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-                        </li>
-                        <li>
-                            <div id="fb-root"></div>
-                            <script>(function(d, s, id) {
-                                var js, fjs = d.getElementsByTagName(s)[0];
-                                if (d.getElementById(id)) return;
-                                js = d.createElement(s); js.id = id;
-                                js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1";
-                                fjs.parentNode.insertBefore(js, fjs);
-                            }(document, 'script', 'facebook-jssdk'));
-                            </script>
-                            <div class="fb-like" data-send="true" data-layout="button_count" data-width="450" data-show-faces="true" data-colorscheme="dark" data-font="tahoma"></div>
-                        </li>
-
+            <div class="padding-10 black-80">
+                <div class="CenterLayout">
+                    <a href="/" class="logo"></a>
+                    <ul class="menu">
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/">About</a></li>
+                        <li><a href="/">Rating</a></li>
+                        <li><a href="/">Random</a></li>
                     </ul>
-
+                    <div class="right">
+                        <ul>
+                            <li>
+                                <a href="https://twitter.com/share" class="twitter-share-button" data-via="MiraclesLive">Tweet</a>
+                                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                            </li>
+                            <li>
+                                <div id="fb-root"></div>
+                                <script>(function(d, s, id) {
+                                    var js, fjs = d.getElementsByTagName(s)[0];
+                                    if (d.getElementById(id)) return;
+                                    js = d.createElement(s); js.id = id;
+                                    js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1";
+                                    fjs.parentNode.insertBefore(js, fjs);
+                                }(document, 'script', 'facebook-jssdk'));
+                                </script>
+                                <div class="fb-like" data-send="true" data-layout="button_count" data-width="450" data-show-faces="true" data-colorscheme="dark" data-font="tahoma"></div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
+                <div class="clear"></div>
             </div>
-        </div>
         {% endblock %}
     </div><!-- #header-->
     <div id="content">
@@ -59,9 +67,10 @@
 
 </div><!-- #wrapper -->
 
+<div class="clear"></div>
 <div id="footer">
-    <div class="CenterLayout">
-        dsfghjk
+    <div class="CenterLayout padding-10 black-80 radius">
+        MiraclesLive.com
     </div>
 </div><!-- #footer -->
 
