--- a/djangodash2012/templates/miracle.html
+++ b/djangodash2012/templates/miracle.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% block title %}{{ miracle.name }} on Miracles Live{% endblock %}
+{% block description %}{{ miracle.description }}{% endblock %}
 {% block content %}
     <h1>{{ miracle.name }}</h1>
     <ul class="blocks">
