--- a/djangodash2012/templates/main.html
+++ b/djangodash2012/templates/main.html
@@ -13,7 +13,7 @@
                 <div url="{{ miracle.get_absolute_url }}" class="img" style="background-image:url('{% static 'images/attractions/'%}{{ miracle.slug }}.jpg')"></div>
                 <div class="imagesPanel black-50" style="text-align:center;">
                     <div class="padding-10">
-                        <span class="photo">10</span>
+                        <span class="photo">{{miracle.image_set.count}}</span>
                         <span class="view">{{ miracle.views_count }}</span>
                     </div>
                 </div>
